--- a/helm/uat/ext/idpay-mock/values.yaml
+++ b/helm/uat/ext/idpay-mock/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-timeline
-    tag: snapshot-release-uat
+    repository: ghcr.io/pagopa/idpay-mock
+    tag:  snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -9,14 +9,14 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "256Mi"
+      cpu: "40m"
     limits:
-      memory: "768Mi"
-      cpu: "600m"
+      memory: "4Gi"
+      cpu: "300m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
@@ -33,9 +33,10 @@ microservice-chart:
       -XX:MaxRAMPercentage=85.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
-      -Djava.security.egd=file:/dev/./urandom
+      -Dio.netty.eventLoopThreads=100 
       -javaagent:/app/applicationinsights-agent.jar 
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
+
 
   envSecret:
     aks-api-url: cstar-u-itn-uat-aks-apiserver-url
@@ -45,9 +46,4 @@ microservice-chart:
     name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
-  postman-test:
-    run: true
-    repoName: idpay-timeline
-    dir: postman
-    collectionName: "idpay-timeline-e2e.postman_collection.json"
-    envVariablesFile: "idpay_uat.postman_environment.json"
+
