--- a/helm/uat/mid/idpay-payment-instrument/values.yaml
+++ b/helm/uat/mid/idpay-payment-instrument/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstarucommonacr.azurecr.io/idpaypaymentinstrument
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-payment-instrument
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -17,15 +17,15 @@ microservice-chart:
 
   autoscaling:
     enable: false
-#    minReplica: 1
-#    maxReplica: 2
-#    pollingInterval: 30 # seconds
-#    cooldownPeriod: 300 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -40,11 +40,11 @@ microservice-chart:
     AZURE_KEYVAULT_URL: "https://cstar-u-idpay-kv.vault.azure.net"
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   postman-test:
