--- a/helm/uat/top/idpay-asset-register-backend/values.yaml
+++ b/helm/uat/top/idpay-asset-register-backend/values.yaml
@@ -1,10 +1,6 @@
 microservice-chart:
-  namespace: "idpay"
-  nameOverride: ""
-  fullnameOverride: ""
-
   image:
-    repository: ghcr.io/pagopa/idpay-portal-welfare-backend-role-permission
+    repository: ghcr.io/pagopa/idpay-asset-register-backend
     tag: snapshot-release-uat
     pullPolicy: Always
 
@@ -13,10 +9,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
@@ -31,6 +27,17 @@ microservice-chart:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
 
+  envConfig:
+    JAVA_TOOL_OPTIONS: >-
+      -XX:InitialRAMPercentage=75.0
+      -XX:MaxRAMPercentage=85.0
+      -XX:+UseG1GC
+      -XX:+UseContainerSupport
+      -Dio.netty.eventLoopThreads=100 
+      -javaagent:/app/applicationinsights-agent.jar 
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
+
+
   envSecret:
     aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
@@ -38,21 +45,4 @@ microservice-chart:
   keyvault:
     name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
-  envConfig:
-    JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
-      -XX:MaxRAMPercentage=85.0
-      -XX:+UseG1GC
-      -XX:+UseContainerSupport
-      -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 
-      -Dio.netty.eventLoopThreads=100 
-      -javaagent:/app/applicationinsights-agent.jar 
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
-
-  # nodeSelector: {}
-
-  # tolerations: []
-
-  # affinity: {}
+  
