--- a/helm/uat/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/uat/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -1,8 +1,8 @@
 microservice-chart:
 
   image:
-    repository: cstarucommonacr.azurecr.io/idpayportalwelfarebackendinitiative
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-portal-welfare-backend-initiative
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
@@ -18,15 +18,15 @@ microservice-chart:
 
   autoscaling:
     enable: false
-#    minReplica: 1
-#    maxReplica: 2
-#    pollingInterval: 30 # seconds
-#    cooldownPeriod: 300 # seconds
-#    triggers:
-#      - type: cpu
-#        metadata:
-#          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-#          value: "70"
+    minReplica: 1
+    maxReplica: 1
+    pollingInterval: 30 # seconds
+    cooldownPeriod: 300 # seconds
+    triggers:
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -40,11 +40,11 @@ microservice-chart:
     INITIATIVE_LOGO_URL: "https://welfare.uat.cstar.pagopa.it/"
 
   envSecret:
-    aks-api-url: cstar-u-weu-uat01-aks-apiserver-url
+    aks-api-url: cstar-u-itn-uat-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
