--- a/helm/prod/top/idpay-wallet/values.yaml
+++ b/helm/prod/top/idpay-wallet/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpaywallet
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-wallet
+    tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
@@ -33,9 +33,9 @@ microservice-chart:
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "true"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
+    aks-api-url: cstar-p-itn-prod-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
