--- a/helm/prod/ext/idpay-mock/values.yaml
+++ b/helm/prod/ext/idpay-mock/values.yaml
@@ -1,19 +1,19 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-merchant
-    tag: snapshot-release-prod
+    repository: ghcr.io/pagopa/idpay-mock
+    tag:  snapshot-release-prod
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.cstar.pagopa.it
+    host: idpay.itn.internal.dev.cstar.pagopa.it
 
   resources:
     requests:
-      memory: "1Gi"
-      cpu: "150m"
+      memory: "256Mi"
+      cpu: "40m"
     limits:
-      memory: "1Gi"
-      cpu: "600m"
+      memory: "4Gi"
+      cpu: "300m"
 
   autoscaling:
     enable: true
@@ -34,10 +34,11 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
-      -javaagent:/app/applicationinsights-agent.jar
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 
+      -Dio.netty.eventLoopThreads=100 
+      -javaagent:/app/applicationinsights-agent.jar 
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
+
 
   envSecret:
     aks-api-url: cstar-p-itn-prod-aks-apiserver-url
