--- a/helm/prod/ext/idpay-notification-email/values.yaml
+++ b/helm/prod/ext/idpay-notification-email/values.yaml
@@ -1,8 +1,8 @@
 microservice-chart:
 
   image:
-    repository: cstarpcommonacr.azurecr.io/idpaynotificationemail
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-notification-email
+    tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
@@ -46,11 +46,11 @@ microservice-chart:
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
+    aks-api-url: cstar-p-itn-prod-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
