--- a/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -4,8 +4,8 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayportalwelfarebackendrolepermission
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-portal-welfare-backend-role-permission
+    tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
@@ -32,11 +32,11 @@ microservice-chart:
           value: "70"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
+    aks-api-url: cstar-p-itn-prod-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   envConfig:
