--- a/helm/prod/top/idpay-asset-register-backend/Chart.yaml
+++ b/helm/prod/top/idpay-asset-register-backend/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: idpay-admissibility-assessor
-description: Admissibility assessor for IdPay
+name: idpay-asset-register-backend
+description: Timeline for IdPay
 type: application
 version: 1.0.0
 appVersion: 1.0.0
