--- a/helm/prod/top/idpay-asset-register-backend/values.yaml
+++ b/helm/prod/top/idpay-asset-register-backend/values.yaml
@@ -1,22 +1,22 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-merchant
+    repository: ghcr.io/pagopa/idpay-asset-register-backend
     tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.cstar.pagopa.it
+    host: idpay.itn.internal.dev.cstar.pagopa.it
 
   resources:
     requests:
-      memory: "1Gi"
-      cpu: "150m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
       memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
-    enable: true
+    enable: false
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
@@ -34,10 +34,10 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
-      -javaagent:/app/applicationinsights-agent.jar
-      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 
+      -Dio.netty.eventLoopThreads=100 
+      -javaagent:/app/applicationinsights-agent.jar 
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
 
   envSecret:
     aks-api-url: cstar-p-itn-prod-aks-apiserver-url
@@ -46,3 +46,10 @@ microservice-chart:
   keyvault:
     name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+  
+ # postman-test:
+ #   run: true
+ #   repoName: idpay-timeline
+ #   dir: postman
+ #   collectionName: "idpay-timeline-e2e.postman_collection.json"
+ #   envVariablesFile: "idpay_dev.postman_environment.json"
