--- a/helm/prod/top/idpay-kafka-connect/Chart.yaml
+++ b/helm/prod/top/idpay-kafka-connect/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: idpay-reward-user-id-splitter
-description: Transaction splitter for IdPay
+name: idpay-kafka-connect
+description: IDPay Kafka Connect
 type: application
 version: 1.0.0
 appVersion: 1.0.0
