--- a/helm/prod/top/idpay-kafka-connect/values.yaml
+++ b/helm/prod/top/idpay-kafka-connect/values.yaml
@@ -1,19 +1,24 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-merchant
+    repository: ghcr.io/pagopa/idpay-kafka-connect
     tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.cstar.pagopa.it
+    host: idpay.itn.internal.dev.cstar.pagopa.it
+    servicePort: 8083
+
+  service:
+    ports:
+      - 8083
 
   resources:
     requests:
-      memory: "1Gi"
-      cpu: "150m"
+      memory: "256Mi"
+      cpu: "100m"
     limits:
-      memory: "1Gi"
-      cpu: "600m"
+      memory: "800Mi"
+      cpu: "500m"
 
   autoscaling:
     enable: true
@@ -29,15 +34,17 @@ microservice-chart:
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
-      -XX:MaxRAMPercentage=85.0
+      -XX:InitialRAMPercentage=80.0
+      -XX:MaxRAMPercentage=90.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
       -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
       -Dio.netty.eventLoopThreads=100
-      -javaagent:/app/applicationinsights-agent.jar
+      -javaagent:applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
+
+    HEAP_OPTS: "-Xms256m -Xmx512m"
 
   envSecret:
     aks-api-url: cstar-p-itn-prod-aks-apiserver-url
