--- a/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
+++ b/helm/prod/top/idpay-portal-welfare-backend-initiative/values.yaml
@@ -1,8 +1,8 @@
 microservice-chart:
 
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayportalwelfarebackendinitiative
-    tag: latest
+    repository: ghcr.io/pagopa/idpay-portal-welfare-backend-initiative
+    tag: snapshot-release-prod
     pullPolicy: Always
 
   ingress:
@@ -39,11 +39,11 @@ microservice-chart:
     INITIATIVE_LOGO_URL: "https://welfare.cstar.pagopa.it/"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
+    aks-api-url: cstar-p-itn-prod-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
