--- a/helm/uat/top/idpay-payment/values.yaml
+++ b/helm/uat/top/idpay-payment/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-payment
-    tag: latest
+    tag: snapshot-release-uat
     pullPolicy: Always
 
   ingress:
