--- a/helm/_global/idpay-self-expense-backend.yaml
+++ b/helm/_global/idpay-self-expense-backend.yaml
@@ -23,6 +23,9 @@ microservice-chart:
 
   deployment:
     create: true
+    topologySpreadConstraints:
+      create: true
+      useDefaultConfiguration: true
 
   service:
     create: true
@@ -95,7 +98,15 @@ microservice-chart:
 
   # tolerations: []
 
-  # affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
 
   externalConfigMapFiles:
     create: true
