fix: add topology spread constraints and node affinity to self-expense backend

--- a/helm/dev/ext/idpay-self-expense-backend/values.yaml
+++ b/helm/dev/ext/idpay-self-expense-backend/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 10
     maxReplica: 10
     pollingInterval: 30 # seconds
