--- a/helm/uat/ext/idpay-self-expense-backend/values.yaml
+++ b/helm/uat/ext/idpay-self-expense-backend/values.yaml
@@ -16,9 +16,9 @@ microservice-chart:
       cpu: "500m"
 
   autoscaling:
-    enable: false
-    minReplica: 1
-    maxReplica: 1
+    enable: true
+    minReplica: 10
+    maxReplica: 10
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
