added topologySpreadConstraints in global

--- a/helm/_global/idpay-payment.yaml
+++ b/helm/_global/idpay-payment.yaml
@@ -21,6 +21,9 @@ microservice-chart:
 
   deployment:
     create: true
+    topologySpreadConstraints:
+      create: true
+      useDefaultConfiguration: true
 
   service:
     create: true
