--- a/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
@@ -24,6 +24,9 @@ microservice-chart:
 
   deployment:
     create: true
+    topologySpreadConstraints:
+      create: true
+      useDefaultConfiguration: true
 
   service:
     create: true
