--- a/helm/_global/idpay-timeline.yaml
+++ b/helm/_global/idpay-timeline.yaml
@@ -23,6 +23,9 @@ microservice-chart:
 
   deployment:
     create: true
+    topologySpreadConstraints:
+      create: true
+      useDefaultConfiguration: true
 
   service:
     create: true
