--- a/helm/_global/idpay-notification-email.yaml
+++ b/helm/_global/idpay-notification-email.yaml
@@ -96,8 +96,10 @@ microservice-chart:
       - name: appinsights-config
         key: applicationinsights.json
 
-  # nodeSelector: {}
-
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
   # affinity: {}
