--- a/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
@@ -95,6 +95,10 @@ microservice-chart:
         key: applicationinsights.json
   # nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
   # affinity: {}
