--- a/helm/_global/idpay-reward-notification.yaml
+++ b/helm/_global/idpay-reward-notification.yaml
@@ -112,3 +112,9 @@ microservice-chart:
     configMaps:
       - name: appinsights-config
         key: applicationinsights.json
+
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
