--- a/helm/_global/idpay-timeline.yaml
+++ b/helm/_global/idpay-timeline.yaml
@@ -78,7 +78,11 @@ microservice-chart:
 
   # nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
   # affinity: {}
 
