--- a/helm/_global/idpay-initiative-statistics.yaml
+++ b/helm/_global/idpay-initiative-statistics.yaml
@@ -63,6 +63,12 @@ microservice-chart:
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
 
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
+
   externalConfigMapValues:
     idpay-common:
       TZ: TZ
