--- a/helm/_global/idpay-mock.yaml
+++ b/helm/_global/idpay-mock.yaml
@@ -69,7 +69,11 @@ microservice-chart:
 
   # nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
   # affinity: {}
 
