--- a/helm/_global/idpay-onboarding-workflow.yaml
+++ b/helm/_global/idpay-onboarding-workflow.yaml
@@ -92,7 +92,11 @@ microservice-chart:
 
   # nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
   # affinity: {}
 
