--- a/helm/_global/idpay-reward-user-id-splitter.yaml
+++ b/helm/_global/idpay-reward-user-id-splitter.yaml
@@ -82,11 +82,15 @@ microservice-chart:
     KAFKA_TRANSACTION_SASL_JAAS_CONFIG: evh-idpay-transaction-idpay-transaction-producer-jaas-config-idpay-00
     KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
 
-  # nodeSelector: {}
+  nodeSelector: {}
 
-  # tolerations: []
+  tolerations:
+    - key: "idpayOnly"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 
-  # affinity: {}
+  affinity: {}
 
   externalConfigMapFiles:
     create: true
