added node affinity

--- a/helm/_global/idpay-initiative-statistics.yaml
+++ b/helm/_global/idpay-initiative-statistics.yaml
@@ -69,6 +69,16 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
+
   externalConfigMapValues:
     idpay-common:
       TZ: TZ
