--- a/helm/_global/idpay-notification-manager.yaml
+++ b/helm/_global/idpay-notification-manager.yaml
@@ -108,7 +108,15 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
-  # affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
 
   externalConfigMapFiles:
     create: true
