--- a/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-role-permission.yaml
@@ -101,4 +101,12 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
-  # affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
