--- a/helm/_global/idpay-recovery-error-topic.yaml
+++ b/helm/_global/idpay-recovery-error-topic.yaml
@@ -94,3 +94,13 @@ microservice-chart:
     configMaps:
       - name: appinsights-config
         key: applicationinsights.json
+
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
