--- a/helm/_global/idpay-reward-calculator.yaml
+++ b/helm/_global/idpay-reward-calculator.yaml
@@ -109,3 +109,13 @@ microservice-chart:
       operator: "Equal"
       value: "true"
       effect: "NoSchedule"
+
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
