--- a/helm/_global/idpay-iban.yaml
+++ b/helm/_global/idpay-iban.yaml
@@ -94,7 +94,15 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
-  affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
 
   externalConfigMapFiles:
     create: true
