--- a/helm/_global/idpay-notification-email.yaml
+++ b/helm/_global/idpay-notification-email.yaml
@@ -102,4 +102,12 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
-  # affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
