--- a/helm/_global/idpay-portal-welfare-backend-initiative.yaml
+++ b/helm/_global/idpay-portal-welfare-backend-initiative.yaml
@@ -133,4 +133,12 @@ microservice-chart:
       value: "true"
       effect: "NoSchedule"
 
-  affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: domain
+            operator: In
+            values:
+            - idpay
