--- a/helm/_global/idpay-group.yaml
+++ b/helm/_global/idpay-group.yaml
@@ -78,6 +78,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     PDV_ENCRYPT_SERVICE_CODE: pdv-ms-tokenizer
     GROUP_FILE_ROOT_PATH: /tmp/group
     DELETE_PAGINATION_SIZE: "100"
