--- a/helm/_global/idpay-recovery-error-topic.yaml
+++ b/helm/_global/idpay-recovery-error-topic.yaml
@@ -53,6 +53,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     KAFKA_ERROR_MESSAGE_GROUP_ID: "idpay-errors-recovery-group"
 
   externalConfigMapValues:
