--- a/helm/_global/idpay-reward-calculator.yaml
+++ b/helm/_global/idpay-reward-calculator.yaml
@@ -55,6 +55,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     KAFKA_TRANSACTION_USER_ID_SPLITTER_GROUP_ID: "idpay-reward-calculator-consumer-group"
     KAFKA_REWARD_RULE_GROUP_ID: "idpay-reward-calculator-rule-consumer-group"
     KAFKA_HPAN_UPDATE_GROUP_ID: "idpay-reward-calculator-hpan-update-consumer-group"
