--- a/helm/_global/idpay-initiative-statistics.yaml
+++ b/helm/_global/idpay-initiative-statistics.yaml
@@ -56,6 +56,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     KAFKA_ONBOARDING_OUTCOME_CONSUMER_GROUP: "idpay-initiative-onboarding-statistics-group"
     KAFKA_MERCHANT_COUNTERS_REWARD_NOTIFICATION_GROUP_ID: "idpay-merchant-counters-notification-group"
     KAFKA_COMMANDS_GROUP_ID: "idpay-commands-statistics-consumer-group"
