--- a/helm/_global/idpay-payment-instrument.yaml
+++ b/helm/_global/idpay-payment-instrument.yaml
@@ -55,6 +55,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
+    APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     PDV_ENCRYPT_SERVICE_CODE: pdv-ms-tokenizer-encrypt
     PDV_DECRYPT_SERVICE_CODE: pdv-ms-tokenizer
     DELETE_PAGINATION_SIZE: "100"
