fix: add telemetry on IDPAY payment

--- a/helm/_global/idpay-payment.yaml
+++ b/helm/_global/idpay-payment.yaml
@@ -51,9 +51,9 @@ microservice-chart:
     MONGODB_DBNAME: idpay
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaypayment"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
-    APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "true"
+    APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
-    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "true"
+    APPLICATIONINSIGHTS_SAMPLING_ENABLED: "false"
     APPLICATIONINSIGHTS_SAMPLING_PERCENTAGE: "100"
     ENABLE_AUDIT_APPENDER: "TRUE"
     KAFKA_COMMANDS_GROUP_ID: "idpay-commands-payment-consumer-group"
