--- a/helm/prod/ext/idpay-mock/values.yaml
+++ b/helm/prod/ext/idpay-mock/values.yaml
@@ -1,11 +1,11 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-mock
-    tag:  snapshot-release-dev
+    tag:  latest
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.dev.cstar.pagopa.it
+    host: idpay.itn.internal.cstar.pagopa.it
 
   resources:
     requests:
@@ -33,22 +33,14 @@ microservice-chart:
       -XX:MaxRAMPercentage=85.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
-      -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
       -Dio.netty.eventLoopThreads=100
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
-      -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n
-      -Dcom.sun.management.jmxremote=true
-      -Dcom.sun.management.jmxremote.port=3002
-      -Dcom.sun.management.jmxremote.rmi.port=3003
-      -Djava.rmi.server.hostname=127.0.0.1
-      -Dcom.sun.management.jmxremote.authenticate=false
-      -Dcom.sun.management.jmxremote.ssl=false
+
 
   envSecret:
-    aks-api-url: cstar-d-itn-dev-aks-apiserver-url
+    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-d-itn-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
