--- a/helm/prod/ext/idpay-self-expense-backend/values.yaml
+++ b/helm/prod/ext/idpay-self-expense-backend/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayselfexpensebackend
+    repository: ghcr.io/pagopa/idpay-self-expense-backend
     tag: latest
     pullPolicy: Always
 
@@ -17,8 +17,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -28,12 +28,10 @@ microservice-chart:
           value: "70"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
-
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   envConfig:
@@ -43,12 +41,10 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
-    CACHE_REFRESH_MS_RATE: "60000"
+    CACHE_REFRESH_MS_RATE: "10000"
     REDIS_CACHE_ENABLED: "true"
     REDIRECT_URI: "https://api-io.cstar.pagopa.it/idpay/self-expense/redirect"
     WEB-VIEW-URL: "https://welfare.cstar.pagopa.it/ricevute/session/<session-id>"
