--- a/helm/prod/mid/idpay-group/values.yaml
+++ b/helm/prod/mid/idpay-group/values.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: cstarpcommonacr.azurecr.io/idpaygroup
+    repository: ghcr.io/pagopa/idpay-group
     tag: latest
     pullPolicy: Always
 
@@ -21,8 +21,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -38,16 +38,14 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar
+      -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
@@ -55,3 +53,9 @@ microservice-chart:
   # tolerations: []
 
   # affinity: {}
+postman-test:
+  run: true
+  repoName: idpay-group
+  dir: postman
+  collectionName: "idpay-group-e2e.postman_collection.json"
+  envVariablesFile: "idpay.postman_environment.json"
