--- a/helm/prod/mid/idpay-payment-instrument/values.yaml
+++ b/helm/prod/mid/idpay-payment-instrument/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpaypaymentinstrument
+    repository: ghcr.io/pagopa/idpay-payment-instrument
     tag: latest
     pullPolicy: Always
 
@@ -17,8 +17,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -34,16 +34,21 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar
+      -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
     SCHEDULE_RETRIEVE_INITIATIVE: 0 0 */2 ? * *
-    AZURE_KEYVAULT_URL: "https://cstar-p-idpay-kv.vault.azure.net"
+    AZURE_KEYVAULT_URL: "https://cstar-p-itn-idpay-kv.vault.azure.net"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+
+  postman-test:
+    run: true
+    repoName: idpay-payment-instrument
+    dir: postman
+    collectionName: "idpay-payment-instrument-e2e.postman_collection.json"
+    envVariablesFile: "idpay.postman_environment.json"
