--- a/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/prod/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -4,7 +4,7 @@ microservice-chart:
   fullnameOverride: ""
 
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayportalwelfarebackendrolepermission
+    repository: ghcr.io/pagopa/idpay-portal-welfare-backend-role-permission
     tag: latest
     pullPolicy: Always
 
@@ -21,8 +21,8 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
@@ -32,11 +32,10 @@ microservice-chart:
           value: "70"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   envConfig:
