--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayadmissibilityassessor
+    repository: ghcr.io/pagopa/idpay-admissibility-assessor
     tag: latest
     pullPolicy: Always
 
@@ -17,18 +17,17 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
-     - type: cpu
-       metadata:
-         type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-         value: "70"
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
     PAGOPA_PDND_CONFIGURATION_JWT_KEY_C001: pagopa-pdnd-configuration-jwt-key-c001
     PAGOPA_PDND_CONFIGURATION_AGID_JWT_PUB_C001: pagopa-pdnd-configuration-agid-jwt-pub-c001
@@ -42,7 +41,7 @@ microservice-chart:
     PAGOPA_PDND_CONFIGURATION_PURPOSE_ID_C021: pagopa-pdnd-configuration-purpose-id-c021
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   envConfig:
@@ -52,25 +51,18 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
-
-    CACHE_REFRESH_MS_RATE: "60000"
+    CACHE_REFRESH_MS_RATE: "10000"
     REDIS_CACHE_ENABLED: "true"
 
-    #TODO PROD AUDIENCE?
     PDND_ACCESS_TOKEN_AUDIENCE: auth.interop.pagopa.it/client-assertion
 
-    PDND_BASE_URL: https://auth.interop.pagopa.it
 
     ANPR_ENV: prod
     ANPR_AUTH_USERID: pagopa-idpay
-    ANPR_BASE_URL: https://modipa.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
-    #AUDIENCE
-    ANPR_C001_AUDIENCE: https://modipa.anpr.interno.it/govway/rest/in/MinInternoPortaANPR/C001-servizioNotifica/v1
-    ANPR_C021_AUDIENCE: https://modipa.anpr.interno.it/govway/rest/in/MinInternoPortaANPR/C021-servizioAccertamentoStatoFamiglia/v1
+    ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
+    #ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
 
-    #TODO Now we are using MOCK on APIM for ANPR and ISEE
+    #TODO Now we are using MOCK on APIM for ISEE
     INPS_ISEE_CONSULTATION_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
