--- a/helm/prod/top/idpay-kafka-connect/values.yaml
+++ b/helm/prod/top/idpay-kafka-connect/values.yaml
@@ -1,19 +1,24 @@
 microservice-chart:
   image:
-    repository: ghcr.io/pagopa/idpay-timeline
-    tag: snapshot-release-uat
+    repository: ghcr.io/pagopa/idpay-kafka-connect
+    tag: latest
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.uat.cstar.pagopa.it
+    host: idpay.itn.internal.cstar.pagopa.it
+    servicePort: 8083
+
+  service:
+    ports:
+      - 8083
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "256Mi"
+      cpu: "100m"
     limits:
-      memory: "768Mi"
-      cpu: "600m"
+      memory: "800Mi"
+      cpu: "500m"
 
   autoscaling:
     enable: true
@@ -29,24 +34,20 @@ microservice-chart:
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
-      -XX:InitialRAMPercentage=75.0
-      -XX:MaxRAMPercentage=85.0
+      -XX:InitialRAMPercentage=80.0
+      -XX:MaxRAMPercentage=90.0
       -XX:+UseG1GC
       -XX:+UseContainerSupport
-      -Djava.security.egd=file:/dev/./urandom
-      -javaagent:/app/applicationinsights-agent.jar
+      -Dio.netty.eventLoopThreads=100
+      -javaagent:applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
+    HEAP_OPTS: "-Xms256m -Xmx512m"
+
   envSecret:
-    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
+  aks-api-url: cstar-p-itn-prod-aks-apiserver-url
+  APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-u-itn-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
-  postman-test:
-    run: true
-    repoName: idpay-timeline
-    dir: postman
-    collectionName: "idpay-timeline-e2e.postman_collection.json"
-    envVariablesFile: "idpay_uat.postman_environment.json"
