--- a/helm/prod/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/prod/top/idpay-onboarding-workflow/values.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: cstarpcommonacr.azurecr.io/idpayonboardingworkflow
+    repository: ghcr.io/pagopa/idpay-onboarding-workflow
     tag: latest
     pullPolicy: Always
 
@@ -17,15 +17,15 @@ microservice-chart:
 
   autoscaling:
     enable: true
-    minReplica: 3
-    maxReplica: 5
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
-     - type: cpu
-       metadata:
-         type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-         value: "70"
+      - type: cpu
+        metadata:
+          type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
+          value: "70"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
@@ -34,15 +34,18 @@ microservice-chart:
       -XX:+UseG1GC
       -XX:+UseContainerSupport
       -Djava.security.egd=file:/dev/./urandom
-      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
-      -Dio.netty.eventLoopThreads=100
       -javaagent:/app/applicationinsights-agent.jar
       -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
 
   envSecret:
-    aks-api-url: cstar-p-weu-prod01-aks-apiserver-url
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
-    name: "cstar-p-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
+postman-test:
+  run: true
+  repoName: idpay-onboarding-workflow
+  dir: postman
+  collectionName: "idpay-onboarding-workflow-e2e.postman_collection.json"
+  envVariablesFile: "idpay.postman_environment.json"
