fix: add realese version on main

--- a/helm/prod/ext/idpay-iban/values.yaml
+++ b/helm/prod/ext/idpay-iban/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-iban
-    tag: latest
+    tag: v1.1.6
     pullPolicy: Always
 
   ingress:
