--- a/helm/prod/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/prod/mid/idpay-recovery-error-topic/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-recovery-error-topic
-    tag: latest
+    tag: v1.1.4
     pullPolicy: Always
 
   resources:
