--- a/helm/prod/mid/idpay-initiative-statistics/values.yaml
+++ b/helm/prod/mid/idpay-initiative-statistics/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-initiative-statistics
-    tag: latest
+    tag: v1.2.5
     pullPolicy: Always
 
   ingress:
