--- a/helm/prod/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/prod/top/idpay-onboarding-workflow/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-onboarding-workflow
-    tag: latest
+    tag: v1.4.2
     pullPolicy: Always
 
   ingress:
