--- a/helm/prod/top/idpay-transactions/values.yaml
+++ b/helm/prod/top/idpay-transactions/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-transactions
-    tag: latest
+    tag: v1.4.1
     pullPolicy: Always
 
   ingress:
