--- a/helm/uat/top/idpay-merchant/values.yaml
+++ b/helm/uat/top/idpay-merchant/values.yaml
@@ -29,6 +29,9 @@ microservice-chart:
 
   envConfig:
     KEYCLOAK_ADMIN_REDIRECT_URI: "https://uat.bonuselettrodomestici.it/esercente"
+    MERCHANT_DEFAULT_INITIATIVES:
+      - "initiative-1"
+      - "initiative-2"
     JAVA_TOOL_OPTIONS: >-
       -XX:InitialRAMPercentage=75.0
       -XX:MaxRAMPercentage=85.0
